--- a/Web_Fundamentals/Registration Forms/newCSS.css
+++ b/Web_Fundamentals/Registration Forms/newCSS.css
@@ -1,20 +1,43 @@
-p {
-    color: brown;
+/* p {
+    background-color: red;
+    display: block;
 }
+
+a {
+    background-color: darkcyan;
+    display: inline;
+    font-size: 14px;
+    width: 180px;
+    margin: 10px;
+    padding: 20px;
+
+} */
 
 h1 {
     font-size: 100px;
     font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
+
+    font-family: -apple-system,
+        BlinkMacSystemFont,
+        'Segoe UI',
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        'Open Sans',
+        'Helvetica Neue',
+        sans-serif
 }
 
 h2 {
-    font-family: fantasy;
-    font-size: 75px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
-
+    background: url("rustic.jpg");
+    background-position: center;
+    background-size: auto;
+    background-repeat: no-repeat;
     background-color: burlywood;
     backdrop-filter: 50px;
 
@@ -25,4 +48,49 @@ img {
     border-top-left-radius: 0ch;
     border-radius: 10%;
     border-color: burlywood;
+}
+
+#tbl {
+    border-width: 10px 10px;
+    border: 10%;
+    width: 25px;
+    height: 50px;
+}
+
+.prog {
+    animation-name: inherit;
+    border-style: initial;
+    margin-left: initial;
+}
+
+#overflow {
+    overflow: scroll;
+
+}
+
+#container {
+    background: darkred;
+    padding: 20px;
+    border-spacing: unset;
+
+}
+
+#box1 {
+    margin 20px;
+    background-color: aqua;
+    display: inline;
+}
+
+#box2 {
+    margin 30px;
+    background-color: aquamarine;
+    display: inline;
+    float: right
+}
+
+#box3 {
+    padding: 20px 20px 20px 20px;
+    background-color: blue;
+    margin 40px;
+    display: inline;
 }
