--- a/Web_Fundamentals/images/style.css
+++ b/Web_Fundamentals/images/style.css
@@ -17,7 +17,7 @@ h2 {
     display: inline-block;
     padding: 15px;
     margin-left: 120px;
-
+    /*i just push using margin to center align my header. is there any other way i can use other methods*/
 }
 
 #header2 {
