--- a/Web_Fundamentals/Flex Navbar/flexstyle.css
+++ b/Web_Fundamentals/Flex Navbar/flexstyle.css
@@ -1,3 +1,4 @@
+/* PART 1 */
 .center-box {
     width: 1200px;
     height: 500px;
@@ -14,4 +15,37 @@
     justify-content: center;
     text-align: center;
     margin: auto;
+}
+
+/* PART 2 */
+@font-face {
+    font-family: Montes;
+    src: url(Montserrat/Montserrat-ExtraLight.ttf);
+}
+
+.nav {
+    background-color: chocolate;
+    display: flex;
+}
+
+h1 {
+    color: white;
+    align-items: center;
+    font-family: Montes;
+    src: url('Montserrat/Montserrat-Black.ttf');
+}
+
+.button {
+    font-family: Montes;
+    list-style-type: none;
+    display: inline-block;
+    justify-content: space-between;
+    margin: 25px;
+    text-decoration: none;
+}
+
+a {
+    flex: 4;
+    color: white;
+    text-decoration: none;
 }
