--- a/Web_Fundamentals/Flex Navbar/flexstyle.css
+++ b/Web_Fundamentals/Flex Navbar/flexstyle.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+
+}
+
 /* PART 1 */
 .center-box {
     height: 500px;
@@ -18,20 +25,26 @@
 /* PART 2 */
 @font-face {
     font-family: Montes;
-    src: url(Montserrat/Montserrat-ExtraLight.ttf);
+    src: url(Montserrat/Montserrat-Light.ttf);
+}
+
+img {
+    margin: 10px;
 }
 
 .nav {
-
     background-color: chocolate;
     display: flex;
+    justify-content: center;
 }
 
 h1 {
     color: white;
     align-items: center;
+
     font-family: Montes;
-    src: url('Montserrat/Montserrat-Black.ttf');
+    font-size: 30px;
+    margin-top: 30px;
 }
 
 .button {
@@ -44,6 +57,7 @@ h1 {
 }
 
 a {
+    font-size: 20px;
     flex: 4;
     color: white;
     text-decoration: none;
