--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -169,7 +169,7 @@ span {
     background-color: green;
     border-radius: 5px;
     border: solid 1px black;
-    box-shadow: 3px;
+    box-shadow: 3px 3px black;
     width: 120px;
     align-items: center;
     color: whitesmoke;
