--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -81,7 +81,7 @@ img {
 p,
 a {
     padding: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     text-decoration-color: black;
     color: black;
     margin: 5px;
@@ -121,7 +121,7 @@ a {
     background-image: linear-gradient(rgba(228, 161, 161, 0.034), whitesmoke);
 }
 
-#prog-lang {
+.prog-lang {
     justify-content: center;
     padding: 10px;
 }
@@ -149,6 +149,7 @@ a {
 }
 
 .footer-icons {
+    font-family: Arial;
     display: flex;
     flex-direction: row;
     width: 25px;
