--- a/HTML & CSS/Python/python.css
+++ b/HTML & CSS/Python/python.css
@@ -38,13 +38,15 @@ body {
     margin-left: px;
     padding: 15px;
     background-color: rgb(78, 78, 78);
-    box-shadow: 3px 5px black;
+    box-shadow: 2px 2px 2px black;
     width: 320px;
     min-height: 2px;
     border-radius: 10px;
 }
 
 .search-container input {
+    text-align: center;
+    padding: 10px;
     height: 30px;
     text-align: center;
 }
