--- a/.vscode/JQuery/styles.css
+++ b/.vscode/JQuery/styles.css
@@ -5,8 +5,25 @@
 }
 
 body {
+
+    width: 100%;
+    height: 100%;
     padding: 20px;
-    background-image: linear-gradient(orange, yellow);
+    background-image: url('Konohavillage.jpg');
+    background-size: 110%;
+    background-repeat: no-repeat;
+}
+
+div {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+em {
+    color: blue;
+    font-weight: bold;
 }
 
 h1 {
@@ -17,14 +34,21 @@ h1 {
 }
 
 p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
+    justify-content: center;
+}
+
+#after {
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 img {
     display: flex;
     width: 50ch;
-    height: 50vh;
+    height: 45vh;
 
 }
 
@@ -42,6 +66,15 @@ button {
 
 #result {
     display: flex;
+    justify-content: center;
     width: 35px;
     height: 35px;
+}
+
+.selected {
+    color: red;
+}
+
+.highlighted {
+    background-color: yellow;
 }
